bug(fix): searchbar input wrong color, added background color

--- a/src/components/inputs/Search/SearchBar/styles.css
+++ b/src/components/inputs/Search/SearchBar/styles.css
@@ -22,6 +22,8 @@
   border: none;
   outline: none;
   padding-left: 26px;
+  background-color: var(--text-white);
+
 }
 .searchBar input::placeholder {
   font-family: 'Rubik';
